# slam-robot

./: software_architecture.drawio
config/: robot_desription.urdf
config/robot_description/: robot_model.config  robot_model.sdf
documentation/: topic_info.txt
documentation/drawio_files/: robot_architecture.drawio
launch/: bringup.launch.py
robot_ws/install/: local_setup.sh  setup.sh
robot_ws/install/main_package/share/ament_index/resource_index/package_run_dependencies/: main_package
robot_ws/install/main_package/share/ament_index/resource_index/parent_prefix_path/: main_package
robot_ws/install/main_package/share/main_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
robot_ws/install/main_package/share/main_package/cmake/: main_packageConfig-version.cmake  main_packageConfig.cmake
robot_ws/install/main_package/share/main_package/environment/: ament_prefix_path.dsv  path.dsv
robot_ws/log/: latest_build
robot_ws/main_package/: CMakeLists.txt  package.xml
robot_ws/main_package/include/: config.h
robot_ws/main_package/launch/: simulation_launch.py
robot_ws/main_package/src/: controller.cpp  lidar_driver.cpp  motor_driver.cpp  sim_lidar_driver.cpp  sim_motor_driver.cpp  sim_robot_controls.cpp
robot_ws/main_package/src/robot_model/: model.config  model.sdf
scripts/: build_ros2.sh  ros_gz_bridge.yaml  run_simulation.sh  setup_env.sh
